# GearVR-CameraPasstrough

./: README.md
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/anothereality/testcamerarender/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/Shaders/: OESSample.fs  OESSampleGrayscale.fs  OESSampleRandomColor.fs  OESSampleSobel.fs  Sample.fs  SampleBoxFilter.fs  SampleSobel.fs  base.vs  baseTransformed.vs
app/src/main/cpp/: CMakeLists.txt  GLUtilities.cpp  GLUtilities.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  native-lib.cpp
app/src/main/cpp/Framebuffer/: Framebuffer.cpp  Framebuffer.h
app/src/main/cpp/Logger/: Assert.cpp  Asserts.h  Logger.cpp  Logger.h
app/src/main/cpp/Math/: Filters.cpp  Filters.h  MathTypes.cpp  MathTypes.h
app/src/main/cpp/Mesh/: Renderable.cpp  Renderable.h  VertexData.cpp  VertexData.h
app/src/main/cpp/Shader/: ShaderProgram.cpp  ShaderProgram.h
app/src/main/cpp/Texture/: Sampler.cpp  Sampler.h  Texture.cpp  Texture.h
app/src/main/java/com/example/anothereality/testcamerarender/: CameraRenderer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/anothereality/testcamerarender/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
